--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -11,17 +11,16 @@ header{
 	background-size: 1000px;
 	height: 250px;
 }
-h1{
-	font-size: 80px;
+h2{
+	font-size: 30px;	
 	color: Gray;
-	margin: 25px;
-	text-align: center;
+	margin: 10px;
+	text-align: center;	
 }
 nav{
-background-color: yellow;
+background-color: rgb(188, 216, 4);
 width: 1000px;
 height: 40px;
-
 
 }
 p{
@@ -47,11 +46,80 @@ background-color: black;
 
 }
 h3{
-	font-size: 10px;
+	font-size: 13px;
 	color:white;
-	text-align: left;
+	text-align: center;
+	
 }
-menu:active{text-decoration: none color:gray;}
-menu:hover{text-decoration: none color:white;}
-menu:link{text-decoration: none color:gray;}
-menu:focus{text-decoration: none color:gray;}
+
+
+*{
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+
+header{
+	width: 100%;
+}
+
+.navegacion{
+	width: 1000px;
+	height: 60px;
+	margin: 0;
+	background: rgb(280, 210, 0);
+}
+
+.navegacion ul{
+	list-style: none;
+}
+
+.menu > li{
+	position: relative;
+	display: inline-block;
+}
+
+.menu > li > a{
+	display: block;
+	padding: 15px 20px;
+	color: rgb(25, 78, 148);
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	text-decoration: none;
+}
+
+.menu li a:hover{
+	color: #CE7D35;
+	transition: all .3s;
+}
+
+/* Submenu*/
+
+.submenu{
+	position: absolute;
+	background: rgba(11, 11, 65, 0.72);
+	width: 120%;
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 1.5s;
+}
+
+.submenu li a{
+	display: block;
+	padding: 10px;
+	color: #fff;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	text-decoration: none;
+}
+
+.menu li:hover .submenu{
+	visibility: visible;
+	opacity: 1;
+}
+
+
+
+
