--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,3 +1,12 @@
+*{
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
 #contenido{
 
 	width: 1000px;
@@ -91,13 +100,6 @@ ol li{
 }
 
 
-*{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
 
 
 
@@ -193,3 +195,38 @@ header{
 		background: #000; 
 		padding: 20px 30px; 
 	}
+
+
+
+#autores{
+	margin: 30px auto;
+	widows: 500px;
+}
+
+table{
+	text-align: center;
+	border-collapse: collapse;
+	width: 750px;
+	height: 180px;	
+}
+
+th, td{
+	padding: 5px;
+}
+
+th{
+	background-color: #f0dfdf;
+}
+
+thead{
+	background-color: #c6c6c6;
+	border-bottom: solid 5px #dfd4d4;
+}
+
+tbody{
+	padding: 20px;
+}
+
+tr{
+	text-align: center;
+}
