--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -41,7 +41,7 @@ h1 {
 
 h2{
 	font-size: 30px;	
-	color: Gray;
+	color: rgb(56, 51, 51);
 	margin: 10px;
 	text-align: justify;	
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
